[package]
name = "p4-controller"
version = "0.1.0"
edition = "2021"

[dependencies]
# gRPC and Protocol Buffers
tonic = "0.10"
prost = "0.12"
prost-types = "0.12"

# Async runtime
tokio = { version = "1.0", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# CLI
clap = { version = "4.0", features = ["derive"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

# Network utilities
ipnet = "2.8"
macaddr = "1.0"

# P4Runtime protobuf definitions
# Note: In a real project, you would generate these from .proto files
# For this example, we'll use simplified types

[build-dependencies]
tonic-build = "0.10"

[[bin]]
name = "controller"
path = "src/bin/controller.rs"
